# fluidmaxxer

./: CMakeLists.txt  README.md
include/boundary/ad/: ADDirichlet.hpp  ADDirichletTanhPulse.hpp  ADNeumannOutlet.hpp
include/boundary/ns/: BounceBack.hpp  PressureDirichlet.hpp  VelocityDirichlet.hpp  VelocityDirichletNEQ.hpp
include/collision/: ADBGKCollision.hpp  BGKCollision.hpp  PorousBGKCollision.hpp
include/core/: CudaHelpers.hpp  Params.hpp  Types.hpp
include/core/descriptors/: D3Q19.hpp  D3Q7.hpp
include/core/helpers/: helpers.hpp
include/core/interfaces/: ADInterfaces.hpp  NSInterfaces.hpp
include/core/io/: ADUnitConverter.hpp  FancyPrint.hpp  OutletCSV.hpp  UnitConverter.hpp
include/core/lattice/: ADLattice.hpp  NSLattice.hpp
include/reaction/: AdsorbedField.hpp  LangmuirLDF.hpp  LinearLDF.hpp
include/vti/: VTIReader.hpp  VTIWriter.hpp
src/: main.cpp
src/boundary/ad/: ADDirichlet.cu  ADDirichletTanhPulse.cu  ADNeumannOutlet.cu
src/boundary/ns/: BounceBack.cu  PressureDirichlet.cu  VelocityDirichlet.cu  VelocityDirichletNEQ.cu
src/collision/: ADBGKCollision.cu  BGKCollision.cu  PorousBGKCollision.cu
src/core/: CudaHelpers.cu  D3Q19Constants.cu  D3Q7Constants.cu  Macros.cu
src/reaction/: LangmuirLDF.cu  LinearLDF.cu
